successful deploy and single run

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-borsh = { version = "=1.2.0", features = ["derive"] }
-solana-program = "=1.14.8"
+borsh = { version = "=0.9.1" }
+solana-program = "1.14.8"
+ahash = "=0.8.6"
 
 [features]
 no-entrypoint = []
