--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-borsh = { version = "=0.9.1" }
-solana-program = "1.14.8"
-ahash = "=0.8.6"
+borsh = { version = "=0.10.3" }
+solana-program = "=1.17.28"
 thiserror = "1.0.58"
 
 [features]
