--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 borsh = { version = "=0.10.3" }
 solana-program = "=1.17.28"
 thiserror = "1.0.58"
+spl-token = { version="~3.3.0", features = [ "no-entrypoint" ] }
+spl-associated-token-account = { version="=1.0.5", features = [ "no-entrypoint" ] }
 
 [features]
 no-entrypoint = []
